<resources>
    <string name="app_name">ReforAccion</string>
    <string name="titleLabel">ReforAcción</string>
    <string name="forgotPassLabel">¿Olvidaste la contraseña?</string>
    <string name="cellphoneNumberLabel">Número de celular registrado</string>
    <string name="loginButtonLabel">Ingresar</string>
    <string name="registerButtonLabel">Registrarse</string>
    <string name="inputPasswordLabel">Ingrese la contraseña</string>
    <string name="cellphoneInputLabel">Número de celular</string>
    <string name="passwordInputLabel">Contraseña</string>
    <string name="nameLabel">Nombre a registrar</string>
    <string name="nameInputLabel">Nombre completo</string>
    <string name="passwordConfirmInputLabel">Confirmar contraseña</string>
    <string name="inputPasswordConfString">Confirme contraseña</string>
    <string name="termsCheckLabel">Acepto los términos y condiciones</string>
    <string name="returnRegisterLabel">Retornar</string>
    <string name="statsButtonLabel">Estadísticas</string>
    <string name="catButtonLabel">Categorías</string>
    <string name="tipsButtonLabel">Consejos</string>
    <string name="plantsPlantedLabel">Cantidad de plantas plantadas</string>
    <string name="mostSownLabel">Zona con mayor siembra</string>
    <string name="monthLabel">Fecha</string>
    <string name="averageCostLabel">Costo promedio</string>
    <string name="totalAverageLabel">Promedio de costos:</string>
    <string name="minPlantedLabel">Mes mínimo plantado:</string>
    <string name="maxPlantedLabel">Mes máximo plantado:</string>
    <string name="plantsCatLabel">Plantas</string>
    <string name="areasCatLabel">Áreas plantadas</string>
    <string name="inputPlantsLabel">Cantidad plantada</string>
    <string name="individualCostLabel">Costo individual</string>
    <string name="monthPlantedLabel">Mes de plantación</string>
    <string name="registerCategoryLabel">Registrar</string>
    <string name="plantRegisterLabel">Registro de plantas</string>
    <string name="areaRegisterLabel">Registro de áreas</string>
    <string name="inputZoneLabel">Zona plantada</string>
    <string name="areaPlantedLabel">Área en metros cuadrados</string>
    <string name="tipALabel">Aquí va el primer consejo</string>
    <string name="tipBLabel">Aquí va el segundo consejo</string>
    <string name="cellphoneUserLabel">+57 300 000 0000</string>
    <string name="logoutLabel">Cerrar sesión</string>
    <string name="usernameLabel">Usuario de la app</string>
</resources>