<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:id="@+id/mainStatsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="38dp"
            android:gravity="center"
            android:text="@string/titleLabel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/brownTitleColor"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/statsPagetext"
            android:layout_width="411dp"
            android:layout_height="58dp"
            android:layout_margin="3dp"
            android:text="@string/statsButtonLabel"
            android:textAlignment="center"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <ScrollView
            android:id="@+id/tableScrollView"
            android:layout_width="372dp"
            android:layout_height="346dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/statsTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contextClickable="false"
                    android:gravity="center"
                    android:textAlignment="center"
                    tools:ignore="UselessParent">

                    <TableRow
                        android:id="@+id/titleRow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|fill_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/monthStatsText"
                            android:layout_width="56dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/monthLabel"
                            android:textAlignment="center"
                            android:textColor="@color/darkBlueTextColor"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck" />

                        <TextView
                            android:id="@+id/plantsPlantedText"
                            android:layout_width="134dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/plantsPlantedLabel"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/darkBlueTextColor"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck" />

                        <TextView
                            android:id="@+id/averageCostText"
                            android:layout_width="92dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/averageCostLabel"
                            android:textAlignment="center"
                            android:textColor="@color/darkBlueTextColor"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck" />

                        <TextView
                            android:id="@+id/mostSownText"
                            android:layout_width="88dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/mostSownLabel"
                            android:textAlignment="center"
                            android:textColor="@color/darkBlueTextColor"
                            android:textStyle="bold"
                            tools:ignore="TextSizeCheck" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/totalAverageText"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/totalAverageLabel"
            android:textAlignment="center"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/minPlantedText"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/minPlantedLabel"
            android:textAlignment="center"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maxPlantedText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/maxPlantedLabel"
            android:textAlignment="center"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/returnStatsButton"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp"
            android:backgroundTint="@color/brownTitleColor"
            android:contentDescription="@string/returnRegisterLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:srcCompat="@android:drawable/ic_menu_revert"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>