<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageButton
        android:id="@+id/returnTipsButton"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/brownTitleColor"
        android:contentDescription="@string/returnRegisterLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.91"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/titleLabel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/brownTitleColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tipsLabelPage"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_margin="3dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="11dp"
        android:text="@string/tipsButtonLabel"
        android:textAlignment="center"
        android:textColor="@color/darkBlueTextColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/tipAButton"
        android:layout_width="233dp"
        android:layout_height="173dp"
        android:layout_marginBottom="310dp"
        android:backgroundTint="@color/lightHoneyBackColor"
        android:clickable="false"
        android:text="@string/tipALabel"
        android:textAlignment="center"
        android:textColor="@color/darkHoneyTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsLabelPage"
        app:layout_constraintVertical_bias="0.296"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/tipBButton"
        android:layout_width="234dp"
        android:layout_height="173dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/lightHoneyBackColor"
        android:enabled="false"
        android:text="@string/tipBLabel"
        android:textAlignment="center"
        android:textColor="@color/darkHoneyTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAButton"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>