<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageButton
        android:id="@+id/returnUserButton"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#755944"
        android:contentDescription="@string/returnRegisterLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.951"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="399dp"
        android:layout_height="71dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="223dp"
        android:text="@string/titleLabel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#755944"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/userImageButton"
        android:layout_width="119dp"
        android:layout_height="113dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#B86437"
        android:contentDescription="@string/returnRegisterLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="@string/logoutLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_dialog_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/usernameLabel"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cellpjoneUserText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/cellpjoneUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:text="@string/cellphoneUserLabel"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="@+id/usernameText"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

</androidx.constraintlayout.widget.ConstraintLayout>