<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageButton
        android:id="@+id/returnCateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/brownTitleColor"
        android:contentDescription="@string/returnRegisterLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areasCatButton"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="374dp"
        android:layout_height="78dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/titleLabel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/brownTitleColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/statsLabelPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/statsLabelPage"
        android:layout_width="365dp"
        android:layout_height="102dp"
        android:layout_margin="3dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:gravity="center"
        android:text="@string/catButtonLabel"
        android:textAlignment="center"
        android:textColor="@color/darkBlueTextColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/plantsCatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/plantsCatButton"
        android:layout_width="234dp"
        android:layout_height="144dp"
        android:backgroundTint="@color/lightHoneyBackColor"
        android:text="@string/plantsCatLabel"
        android:textAlignment="center"
        android:textColor="#877A47"
        android:textSize="34sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        app:rippleColor="@color/darkHoneyTextColor" />

    <Button
        android:id="@+id/areasCatButton"
        android:layout_width="234dp"
        android:layout_height="144dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/lightHoneyBackColor"
        android:text="@string/areasCatLabel"
        android:textAlignment="center"
        android:textColor="@color/darkHoneyTextColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantsCatButton"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>