<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    app:layout_constraintCircleRadius="40dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="334dp"
        android:layout_height="70dp"
        android:layout_marginTop="136dp"
        android:text="@string/titleLabel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/brownTitleColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="341dp"
        android:layout_height="350dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/form_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/inputCellLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="17dp"
            android:text="@string/cellphoneInputLabel"
            android:textAlignment="viewStart"
            android:textColor="@color/darkGreenTextColor"
            android:textColorLink="@color/darkGreenTextColor"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cellphoneLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:gravity="center"
            android:textAlignment="center"
            app:boxBackgroundColor="@color/inputBoxColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mediumGreenColor"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/darkGreenTextColor"
            app:expandedHintEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cellphoneLoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cellphoneNumberLabel"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/darkGreenTextColor"
                android:textColorHint="@color/darkGreenTextColor"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="17dp"
            android:text="@string/passwordInputLabel"
            android:textColor="@color/darkGreenTextColor"
            android:textColorLink="@color/darkGreenTextColor"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:boxBackgroundColor="@color/inputBoxColor"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/mediumGreenColor"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/darkGreenTextColor"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/darkGreenTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputPasswordLabel"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/darkGreenTextColor"
                android:textColorHint="@color/darkGreenTextColor"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/loginButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purpleButtonsColor"
                android:text="@string/registerButtonLabel"
                android:textColor="#FFFFFF"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purpleButtonsColor"
                android:text="@string/loginButtonLabel"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:icon="@android:drawable/ic_lock_idle_lock"
                app:iconGravity="start"
                app:iconTint="@color/white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/forgotPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="17dp"
            android:text="@string/forgotPassLabel"
            android:textAlignment="viewStart"
            android:textColor="@color/darkGreenTextColor"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>