<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <Button
        android:id="@+id/statsButton"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="@color/buttonBackgroundColor"
        android:drawableTop="@drawable/stats_button"
        android:text="@string/statsButtonLabel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personalInfoButton"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/categoriesButton"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="@color/buttonBackgroundColor"
        android:drawableTop="@drawable/category_back"
        android:text="@string/catButtonLabel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/statsButton"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/tipsButton"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="@color/buttonBackgroundColor"
        android:drawableTop="@drawable/tips_background"
        android:text="@string/tipsButtonLabel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoriesButton"
        tools:ignore="VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/personalInfoButton"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#755944"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>